crates/omni-types/tests/compile_fail/cannot_pass_modelid_as_nodeid.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/cannot_pass_modelid_as_nodeid.rs:12:22
   |
12 |     requires_node_id(model);
   |     ---------------- ^^^^^ expected `NodeId`, found `ModelId`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/cannot_pass_modelid_as_nodeid.rs:7:4
   |
7  | fn requires_node_id(_n: omni_types::NodeId) {}
   |    ^^^^^^^^^^^^^^^^ ----------------------
